[gd_scene load_steps=6 format=3 uid="uid://clvjfhd6smwur"]

[ext_resource type="Script" uid="uid://84tj8umi14kq" path="res://scenes/area_functionality/lock_puzzle.gd" id="1_1u74s"]
[ext_resource type="FontFile" uid="uid://cpt2tglodw1ic" path="res://fonts&style/Exo-VariableFont_wght.ttf" id="1_pql0w"]
[ext_resource type="Texture2D" uid="uid://dejkv35wq5snk" path="res://assets/digits/digit_0.png" id="2_ueiib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1stl3"]
size = Vector2(82, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llnsk"]
size = Vector2(82, 51)

[node name="LockPuzzle" type="Area2D"]
script = ExtResource("1_1u74s")

[node name="LockBody" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LockBody"]
position = Vector2(31, 1.5)
shape = SubResource("RectangleShape2D_1stl3")

[node name="Digit1" type="Sprite2D" parent="."]
texture = ExtResource("2_ueiib")

[node name="Digit2" type="Sprite2D" parent="."]
position = Vector2(20, 0)
texture = ExtResource("2_ueiib")

[node name="Digit3" type="Sprite2D" parent="."]
position = Vector2(40, 0)
texture = ExtResource("2_ueiib")

[node name="Digit4" type="Sprite2D" parent="."]
position = Vector2(60, 0)
texture = ExtResource("2_ueiib")

[node name="InteractLabel" type="Label" parent="."]
offset_left = -21.0
offset_top = -30.0
offset_right = 326.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/font = ExtResource("1_pql0w")
text = "Press -e to interact and click to increment digits"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31, 1.5)
shape = SubResource("RectangleShape2D_llnsk")
